# fastapi-slice-architecture-skeleton

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  readme.md  requirements.txt  setup.cfg
alembic/: env.py  script.py.mako
alembic/versions/: 8997790b1a46_tabelas_iniciais.py  9cc0564d755d_estrtutura_inicial.py
app/: .env.example  main.py  routes.py
app/core/: config.py  logging.py  mediator.py  vault.py
app/features/: base_cqrs_handler.py
app/features/departamento/: add.py  departamento_controller.py  departamento_schema.py  get_all.py
app/features/empresa/: add.py  empresa_controller.py  empresa_schema.py  get_all.py
app/features/healthcheck/: health_controller.py  health_schemas.py
app/infrastructure/db/: database.py  migrations.py
app/infrastructure/db/models/: __init__.py  departamento.py  empresa.py  pessoa.py
app/middleware/: db_middleware.py
app/middleware/mediatr/: db_behavior.py
app/utils/exceptions/: item_exists.py
tests/: conftest.py
tests/features/departamento/: add_command_test.py  departamento_controller_test.py  get_all_query_test.py
tests/features/empresa/: add_command_test.py  empresa_controller_test.py  get_all_query_test.py
tests/features/heathcheck/: health_controller_test.py
tests/fixtures/: departamento.py  empresa.py
