[tool.poetry]
name = "vertical-slice-architecture-skeleton"
version = "0.1.0"
description = ""
authors = ["Fabiano Campos <fabiano.a.campos@gmail.com>"]
readme = "readme.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
sqlmodel = "^0.0.8"
pymysql = "^1.0.3"
python-dotenv = "^1.0.0"
py-automapper = "^1.2.3"
mediatr = "^1.3.2"
uvicorn = "^0.21.1"
requests = "^2.28.2"
alembic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pycycle = "^0.0.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"